apparently it no longer worked with List.of. Changed it to Arrays.asList